--- a/fluid_mechanics/references.bib
+++ b/fluid_mechanics/references.bib
@@ -1,55 +1,96 @@
----
----
-
-@inproceedings{holdgraf_evidence_2014,
-	address = {Brisbane, Australia, Australia},
-	title = {Evidence for {Predictive} {Coding} in {Human} {Auditory} {Cortex}},
-	booktitle = {International {Conference} on {Cognitive} {Neuroscience}},
-	publisher = {Frontiers in Neuroscience},
-	author = {Holdgraf, Christopher Ramsay and de Heer, Wendy and Pasley, Brian N. and Knight, Robert T.},
-	year = {2014}
+    
+@BOOK{Pope_2000,
+  title = {Turbulent Flows},
+  publisher = {Cambridge University Press},
+  year = {2000},
+  author = {S. B. Pope},
+  address = {New York}
 }
 
-@article{holdgraf_rapid_2016,
-	title = {Rapid tuning shifts in human auditory cortex enhance speech intelligibility},
-	volume = {7},
-	issn = {2041-1723},
-	url = {http://www.nature.com/doifinder/10.1038/ncomms13654},
-	doi = {10.1038/ncomms13654},
-	number = {May},
-	journal = {Nature Communications},
-	author = {Holdgraf, Christopher Ramsay and de Heer, Wendy and Pasley, Brian N. and Rieger, Jochem W. and Crone, Nathan and Lin, Jack J. and Knight, Robert T. and Theunissen, Frédéric E.},
-	year = {2016},
-	pages = {13654},
-	file = {Holdgraf et al. - 2016 - Rapid tuning shifts in human auditory cortex enhance speech intelligibility.pdf:C\:\\Users\\chold\\Zotero\\storage\\MDQP3JWE\\Holdgraf et al. - 2016 - Rapid tuning shifts in human auditory cortex enhance speech intelligibility.pdf:application/pdf}
+@book{Cengel_2010,
+ author = {{\c{C}}engel, Yunus A. and Cimbala, John M.},
+ year = {2010},
+ title = {Fluid Mechanics},
+ edition = {2nd ed.},
+ publisher = {{McGraw-Hill Higher Education}},
+ isbn = {0077295463},
+ subtitle = {Fundamentals and Applications},
+ location = {Boston},
+ series = {{\c{C}}engel series in engineering thermal-fluid sciences},
+ pagetotal = {xxiii, 994},
 }
 
-@inproceedings{holdgraf_portable_2017,
-	title = {Portable learning environments for hands-on computational instruction using container-and cloud-based technology to teach data science},
-	volume = {Part F1287},
-	isbn = {978-1-4503-5272-7},
-	doi = {10.1145/3093338.3093370},
-	abstract = {© 2017 ACM. There is an increasing interest in learning outside of the traditional classroom setting. This is especially true for topics covering computational tools and data science, as both are challenging to incorporate in the standard curriculum. These atypical learning environments offer new opportunities for teaching, particularly when it comes to combining conceptual knowledge with hands-on experience/expertise with methods and skills. Advances in cloud computing and containerized environments provide an attractive opportunity to improve the effciency and ease with which students can learn. This manuscript details recent advances towards using commonly-Available cloud computing services and advanced cyberinfrastructure support for improving the learning experience in bootcamp-style events. We cover the benets (and challenges) of using a server hosted remotely instead of relying on student laptops, discuss the technology that was used in order to make this possible, and give suggestions for how others could implement and improve upon this model for pedagogy and reproducibility.},
-	author = {Holdgraf, Christopher Ramsay and Culich, A. and Rokem, A. and Deniz, F. and Alegro, M. and Ushizima, D.},
-	year = {2017},
-	keywords = {Teaching, Bootcamps, Cloud computing, Data science, Docker, Pedagogy}
+@BOOK{Ferziger_2002,
+  title = {Computational methods for fluid dynamics},
+  publisher = {Springer Verlag},
+  year = {2002},
+  author = {J. H. Ferziger},
+  address = {Heidelberg, Germany},
+  edition = {3rd}
 }
 
-@article{holdgraf_encoding_2017,
-	title = {Encoding and decoding models in cognitive electrophysiology},
-	volume = {11},
-	issn = {16625137},
-	doi = {10.3389/fnsys.2017.00061},
-	abstract = {© 2017 Holdgraf, Rieger, Micheli, Martin, Knight and Theunissen. Cognitive neuroscience has seen rapid growth in the size and complexity of data recorded from the human brain as well as in the computational tools available to analyze this data. This data explosion has resulted in an increased use of multivariate, model-based methods for asking neuroscience questions, allowing scientists to investigate multiple hypotheses with a single dataset, to use complex, time-varying stimuli, and to study the human brain under more naturalistic conditions. These tools come in the form of “Encoding” models, in which stimulus features are used to model brain activity, and “Decoding” models, in which neural features are used to generated a stimulus output. Here we review the current state of encoding and decoding models in cognitive electrophysiology and provide a practical guide toward conducting experiments and analyses in this emerging field. Our examples focus on using linear models in the study of human language and audition. We show how to calculate auditory receptive fields from natural sounds as well as how to decode neural recordings to predict speech. The paper aims to be a useful tutorial to these approaches, and a practical introduction to using machine learning and applied statistics to build models of neural activity. The data analytic approaches we discuss may also be applied to other sensory modalities, motor systems, and cognitive systems, and we cover some examples in these areas. In addition, a collection of Jupyter notebooks is publicly available as a complement to the material covered in this paper, providing code examples and tutorials for predictive modeling in python. The aimis to provide a practical understanding of predictivemodeling of human brain data and to propose best-practices in conducting these analyses.},
-	journal = {Frontiers in Systems Neuroscience},
-	author = {Holdgraf, Christopher Ramsay and Rieger, J.W. and Micheli, C. and Martin, S. and Knight, R.T. and Theunissen, F.E.},
-	year = {2017},
-	keywords = {Decoding models, Encoding models, Electrocorticography (ECoG), Electrophysiology/evoked potentials, Machine learning applied to neuroscience, Natural stimuli, Predictive modeling, Tutorials}
+@BOOK{Anderson_1995,
+  title = {Computational Fluid Dynamics, the Basics with Applications},
+  publisher = {McGraw-Hill},
+  year = {1995},
+  author = {John D. Anderson},
+  address = {New York}
 }
 
-@book{ruby,
-  title     = {The Ruby Programming Language},
-  author    = {Flanagan, David and Matsumoto, Yukihiro},
-  year      = {2008},
-  publisher = {O'Reilly Media}
+@BOOK{Panton_1997,
+  title = {Incompressible Flow},
+  publisher = {Wiley-Interscience},
+  year = {1997},
+  author = {Ronald L. Panton},
+  address = {New York},
+  edition = {2}
 }
+@BOOK{Bird_2002,
+  title = {Transport Phenomena},
+  publisher = {John Wiley and Sons},
+  year = {2002},
+  author = {R. Byron Bird and Warren E. Stewart and Edwin N. Lightfoot},
+  edition = {2}
+}
+@BOOK{Schlichting_2000,
+  title = {Boundary-Layer Theory},
+  publisher = {Springer-Verlag},
+  year = {2000 },
+  author = {H. Schlichting and K. Gersten},
+  address = {Heidelberg, Germany},
+  edition = {Eighth}
+}
+@BOOK{Sagaut_2006,
+  title = {Large Eddy Simulation for Incompressible Flows},
+  publisher = {Springer},
+  year = {2006},
+  author = {P. Sagaut},
+  address = {Heidelberg, Germany},
+  edition = {3rd}
+}
+@BOOK{Lomax_2004,
+  title = {Fundamentals of Computational Fluid Dynamics},
+  publisher = {Springer Verlag},
+  year = {2004},
+  author = {H. Lomax and Thomas H. Pulliam and David W. Zingg},
+  address = {Heidelberg, Germany}
+}
+@BOOK{Lin_1988,
+  title = {Mathematics Applied to Deterministic Problems in the Natural Sciences},
+  publisher = {SIAM},
+  year = {1988},
+  author = {Lin, C. C. and Segel, L. A.},                             
+  address = {Philadelphia, PA, USA}
+}
+
+@ARTICLE{Esteban_2010,
+  author = {E. Gonzalez-Juez and A. R. Kerstein and D. O. Lignell},
+  title = {Fluxes across double-diffusive interfaces: a one-dimensional-turbulence
+	study},
+  journal = jfm,
+  year = {2011},
+  volume = {677},
+  pages = {218-254}
+}
+
+
